[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )
limit_left = 0
limit_top = 0
limit_right = 992
limit_bottom = 576

[node name="light_main" type="Light2D" parent="."]
texture = ExtResource( 3 )
energy = 10.0
shadow_enabled = true

[node name="light_player" type="Light2D" parent="."]
light_mask = 2
texture = ExtResource( 3 )
range_item_cull_mask = 2

[node name="light_aux" type="Light2D" parent="."]
texture = ExtResource( 3 )
